--- a/www/index.html
+++ b/www/index.html
@@ -531,53 +531,41 @@
 <script src="lib/onsen/js/onsenui.js"></script>
 <script>
     var admobid = {}
-
     if (/(android)/i.test(navigator.userAgent)) {  // for android & amazon-fireos
         admobid = {
             banner: 'ca-app-pub-7091486462236476/7375172387',
             interstitial: 'ca-app-pub-7091486462236476/6017665160',
         }
-    } else if (/(ipod|iphone|ipad)/i.test(navigator.userAgent)) {  // for ios
-        admobid = {
-            banner: 'ca-app-pub-7091486462236476/7375172387',
-            interstitial: 'ca-app-pub-7091486462236476/6017665160',
-        }
     }
-
-    document.addEventListener('deviceready', function () { 
-        admob.banner.config({
-            id: admobid.banner,
-            isTesting: false,
-            autoShow: true,
-        })
-        admob.banner.prepare()
-
+    document.addEventListener('deviceready', function () {
+        admob.banner.prepare({ id: admobid.banner, isTesting: false, autoShow: true, })
         admob.interstitial.config({
             id: admobid.interstitial,
-            isTesting: false,
+            isTesting: true,
             autoShow: false,
         })
         admob.interstitial.prepare()
-
-        document.getElementById('showAd').disabled = true
-        document.getElementById('showAd').onclick = function() {
-          admob.interstitial.show()
+        document.getElementsByClassName('showAd').disabled = true
+        document.getElementsByClassName('showAd').onclick = function() {
+            admob.interstitial.show()
         }
     }, false);
 
     document.addEventListener('admob.banner.events.LOAD_FAIL', function(event) {
-        console.log(event)
+        //alert(JSON.stringify(event))
     })
 
     document.addEventListener('admob.interstitial.events.LOAD_FAIL', function(event) {
-        console.log(event)
+        //alert(JSON.stringify(event))
     })
 
     document.addEventListener('admob.interstitial.events.LOAD', function(event) {
-        document.getElementById('showAd').disabled = false
+        //alert(JSON.stringify(event))
+        document.getElementsByClassName('showAd').disabled = false
     })
 
     document.addEventListener('admob.interstitial.events.CLOSE', function(event) {
+        //alert(JSON.stringify(event))
         admob.interstitial.prepare()
     })
 </script>
