--- a/www/index.html
+++ b/www/index.html
@@ -554,6 +554,7 @@
             admob.interstitial.show()
         }
         $(".showAd").click(function(){
+            alert("Clicou")
             admob.interstitial.show()
         });
     }, false);
