--- a/www/index.html
+++ b/www/index.html
@@ -28,8 +28,8 @@
             <div class="center"><center>Bíblia Sagrada NVI</center></div>
         </ons-toolbar>
         <ons-tabbar swipeable id="appTabbar" position="auto">
-            <ons-tab onclick="int()" label="Antigo Testamento" page="antigo_testamento.html" active></ons-tab>
-            <ons-tab onclick="int()" label="Novo Testamento" page="novo_testamento.html"></ons-tab>
+            <ons-tab label="Antigo Testamento" page="antigo_testamento.html" active></ons-tab>
+            <ons-tab label="Novo Testamento" page="novo_testamento.html"></ons-tab>
         </ons-tabbar>
 
         <script>
@@ -556,15 +556,6 @@
         }
     }, false);
 
-    function int() {
-        admob.interstitial.config({
-            id: admobid.interstitial,
-            isTesting: false,
-            autoShow: false,
-        })
-        admob.interstitial.prepare()
-        admob.interstitial.show()
-    }
     document.addEventListener('admob.banner.events.LOAD_FAIL', function(event) {
         //alert(JSON.stringify(event))
     })
